/* English */ add SAMPA, formatting, discuss in tearoom <spelt#8756130>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,30 +1,27 @@
 ==English==
+{{tearoom}}
+
+===Pronunciation===
+* {{IPA|/'spεlt/}}, {{SAMPA|/"spElt/}}
+*: {{rhymes|ɛlt}}
 
 ===Etymology 1===
-''Chiefly British'', through ''French'' [[espeller]] and dialect nuance.
+Through {{etyl|fr}} {{term|espeller|lang=fr}} and dialect nuance.
 
 ====Alternative spellings====
-* [[spelled]] ''(American English)''
-
-====Pronunciation====
-* {{IPA|/'spεlt/}}
-*: {{rhymes|ɛlt}}
+* [[spelled]] {{qualifier|US}}
 
 ====Verb====
 '''spelt'''
 
-# {{past of|[[spell#Verb|spell]]}}
+# {{chiefly|British}} {{past of|[[spell#Verb|spell]]}}
 
 =====Quotations=====
 * '''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
 *: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
-Unknown, but Old English {{term|spelt|lang=ang}}, and Late Latin {{term|spelda|lang=la}}.
-
-====Pronunciation====
-* {{IPA|/'spεlt/}}
-* {{rhymes|ɛlt}}
+Unknown, but possibly {{etyl|ang}} {{term|spelt|lang=ang}}, and {{etyl|LL.}} {{term|spelda|lang=la}}.
 
 ====Noun====
 {{en-noun|-}}
@@ -74,7 +71,7 @@ From {{etyl|gmh}} {{term|spalden|lang=gmh}}, or {{etyl|non}} {{term|spald|lang=n
 ====Noun====
 {{en-noun}}
 
-# {{dialect|Northern British}} A thin piece of wood or metal; a splinter.
+# {{dialect|Northern England|Scotland}} A thin piece of wood or metal; a splinter.
 
 =====See also=====
 * {{pedialite}}
