--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -83,6 +83,24 @@ From {{etyl|gmh}} {{term|spalden|lang=gmh}}, or {{etyl|non}} {{term|spald|lang=n
 
 ----
 
+==Danish==
+
+===Etymology===
+From {{etyl|gml|da}} {{term|spelte|lang=gml}}.
+
+===Pronunciation===
+* {{IPA|/spɛlt/|[sb̥ɛlˀd̥]|lang=da}}
+
+===Noun===
+{{da-noun|en|-}}
+
+# {{l|en|spelt}} {{gloss|a type of wheat, ''Triticum spelta''}}
+
+===External links===
+* {{pedialite|lang=da}}
+
+----
+
 ==Dutch==
 
 ===Pronunciation===
