/* Etymology 1 */ simpler <spelt#8756357>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -6,7 +6,7 @@
 *: {{rhymes|ɛlt}}
 
 ===Etymology 1===
-Through {{etyl|fr}} {{term|espeller|lang=fr}} and dialect nuance.
+See {{term|spell#Etymology|spell}}
 
 ====Alternative spellings====
 * [[spelled]] {{qualifier|US}}
