--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -244,14 +244,13 @@ From late {{etyl|non|da}} {{term|penni|lang=non}}, from {{etyl|la|da}} {{term|pe
 * {{audio|Nl-pen.ogg|Audio}}
 
 ===Noun===
-'''pen''' ''m''
-
-# pen {{italbrac|writing utensil}}
+{{nl-noun|g1=f|g2=m|pennen|pennetje}}
+# a [[#English|pen]] {{italbrac|writing utensil}}
+# a [[pin]]
 
 ====Derived terms====
-* [[balpen]]
-* [[kroontjespen]]
-* [[vulpen]]
+* {{sense|pen}} [[balpen]], [[kroontjespen]], [[vulpen]]
+* {{sense|pin}} [[scharnierpen]], [[aardingspen]]
 
 ----
 
