--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,5 +1,6 @@
- + : ISRAEL DEMOCRACY IS OK IN MIDDLE EAST BUT FAR FROM GOOD, ESPECIALLY NOW WITH EAST JERUSALEM THAT LL NEVER B RECOGNIZED BY UN OR ANY MAJOR WORLDBODY! 
-  + BEFORE PALESTINIANS THERE WERE PHILISTINIANS! ISRAEL'S NAME DERIVES FROM ISAAC, ISAC! SON OF JACOB DIDNT WRESTLE ANYBODY! OLD FOLK TALE! 
+{{wikipedia}}
+{{also|Ísrael|Israël|İsrael}}
+==English==
 
 ===Pronunciation===
 * {{enPR|ĭz'rāəl|ĭz'rēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/}}; {{SAMPA|/"IzreI@l/|/"Izri@l/}}
