t+ru:[[европеец]] t-balance t+ru:[[европейка]] t+ru:[[европейский]] t+ar:[[أوروبي]] t+ar:[[أوروبية]] t+zh:[[歐洲]] t+zh:[[欧洲]] t+zh:[[歐洲人]] t+zh:[[欧洲人]] t+hi:[[युरोपियन]] ([[W <European#8805318>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -22,6 +22,7 @@
 
 ====Translations====
 {{trans-top|related to Europe or the European Union}}
+* Arabic: {{t|ar|أوروبي|tr='uruubiy|sc=Arab}}
 * Armenian: {{t-|hy|եվրոպական|tr=evropakan}}
 * [[Catalan]]: [[europeu]] {{m}}, [[europea]] {{f}}
 * Croatian: {{t-|hr|europski|alt=èuropskī}}
@@ -40,8 +41,10 @@
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 * Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
 * Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
+* Mandarin: {{t|zh|歐洲|alt=歐洲的|sc=Hani}},  {{t|zh|欧洲|tr=Ōuzhōu-de|alt=欧洲的|sc=Hani}}
 * Polish: {{t+|pl|europejski|m}}, {{t-|pl|europejska|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
+* Russian: {{t|ru|европейский|tr=jevropéjskij|sc=Cyrl}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europeisk}}
 * Welsh: [[Ewropeaidd]]
@@ -55,6 +58,7 @@
 
 ====Translations====
 {{trans-top|person}}
+* Arabic: {{t|ar|أوروبي|m|tr='uruubiy|sc=Arab}},  {{t|ar|أوروبية|f|tr='urubíyya|sc=Arab}}
 * Armenian: {{t-|hy|եվրոպացի|tr=evropac'i}}
 * [[Catalan]]: [[europeu]] {{m}} [[europea]] {{f}}
 * Croatian: {{t-|hr|Europljanin|m|alt=Európljanin}}, {{t-|hr|Europljanka|f|alt=Európljānka}}, {{t-|hr|Europejac|m|alt=Européjac}}
@@ -68,13 +72,16 @@
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
 {{trans-mid}}
 * Greek: {{t|el|Ευρωπαίος|m|tr=evropéos}},  {{t|el|Ευρωπαία|f|tr=evropéa}}
+* Hindi: {{t|hi|युरोपियन|tr=yuropiyan|sc=Deva}}
 * Hungarian: [[európai]], [[européer]]
 * [[Interlingua]]: [[europeo]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 * Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin)
+* Mandarin: {{t|zh|歐洲人|sc=Hani}},  {{t|zh|欧洲人|tr=Ōuzhōu-rén|sc=Hani}}
 * Polish: {{t+|pl|Europejczyk|m}}, {{t+|pl|Europejka|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
 * Romanian: [[european]] {{m}}, [[europeană]] {{f}}
+* Russian: {{t|ru|европеец|m|tr=jevropéjec|sc=Cyrl}},  {{t|ru|европейка|f|tr=jevropéjka|sc=Cyrl}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europé|c}}
 * Welsh: [[Ewropead]]
