t+uk:[[європейський]] t-balance t+ko:[[유럽 사람]] t+vi:[[người Châu Âu]] t+ja:[[ヨーロッパ人]] t+ja:[[欧州人]] ([[WT:EDIT|Assisted]]) <European#8805437>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -36,8 +36,8 @@
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
-* Greek: {{t+|el|ευρωπαϊκός|tr=evropa'ikós}}
 {{trans-mid}}
+* Greek: {{t+|el|ευρωπαϊκός|tr=evropa'ikós}}
 * Hungarian: {{t+|hu|európai}}
 * [[Interlingua]]: [[europee]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
@@ -48,6 +48,7 @@
 * Russian: {{t|ru|европейский|tr=jevropéjskij|sc=Cyrl}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europeisk}}
+* Ukrainian: {{t|uk|європейський|tr=jevropéjs'kyj|sc=Cyrl}}
 * Welsh: [[Ewropeaidd]]
 * [[West Frisian]]: [[Europeesk]]
 {{trans-bottom}}
@@ -73,19 +74,21 @@
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|Européen|m}}, {{t+|fr|Européenne|f}}
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
-{{trans-mid}}
 * Greek: {{t|el|Ευρωπαίος|m|tr=evropéos}},  {{t|el|Ευρωπαία|f|tr=evropéa}}
+{{trans-mid}}
 * Hindi: {{t|hi|युरोपियन|tr=yuropiyan|sc=Deva}}
 * Hungarian: [[európai]], [[européer]]
 * [[Interlingua]]: [[europeo]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
-* Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin)
+* Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin),  {{t|ja|ヨーロッパ人|tr=Yōroppa-jin|sc=Jpan}},  {{t|ja|欧州人|tr=おうしゅうじん, Ōshū-jin|sc=Jpan}}
+* Korean: {{t|ko|유럽 사람|tr=Yureop saram|sc=Kore}}
 * Polish: {{t+|pl|Europejczyk|m}}, {{t+|pl|Europejka|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
 * Romanian: [[european]] {{m}}, [[europeană]] {{f}}
 * Russian: {{t|ru|европеец|m|tr=jevropéjec|sc=Cyrl}},  {{t|ru|европейка|f|tr=jevropéjka|sc=Cyrl}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europé|c}}
+* Vietnamese: {{t|vi|người Châu Âu}}
 * Welsh: [[Ewropead]]
 * [[West Frisian]]: [[Europeaan]]
 {{trans-bottom}}
