--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -80,7 +80,7 @@
 * Hungarian: [[európai]], [[européer]]
 * [[Interlingua]]: [[europeo]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
-* Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin),  {{t|ja|ヨーロッパ人|tr=Yōroppa-jin|sc=Jpan}},  {{t|ja|欧州人|tr=おうしゅうじん, Ōshū-jin|sc=Jpan}}
+* Japanese: {{t|ja|ヨーロッパ人|tr=Yōroppa-jin|sc=Jpan}},  {{t|ja|欧州人|tr=おうしゅうじん, Ōshū-jin|sc=Jpan}}
 * Korean: {{t|ko|유럽 사람|tr=Yureop saram|sc=Kore}}
 * Polish: {{t+|pl|Europejczyk|m}}, {{t+|pl|Europejka|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
