t+hy:[[կրիա]] ([[WT:EDIT|Assisted]]) <tortoise#8806400>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|land-dwelling reptile}}
 * Albanian: [[breshkë]] [[:sq:breshkë|º]] {{f}}
+* Armenian: {{t|hy|կրիա|tr=kria|sc=Armn}}
 * Bosnian: {{t-|bs|kornjača|f}}
 * [[Breton]]: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
 * [[Catalan]]: [[tortuga]] {{f}}
