--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -15,7 +15,7 @@
 # To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
 # {{intransitive|colloquial}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency.
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
-#*: . . . and it has a few very high points . . . but as a novel, '''it sucks'''.
+#*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''.
 # To perform [[fellatio]]; with ''off'' means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
