t+no:[[kutt]] ([[WT:EDIT|Assisted]]) <cut#8832085>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -145,6 +145,7 @@
 {{trans-mid}}
 * Icelandic: {{t+|is|skurður|m}}
 * Italian: {{t+|it|taglio|m}}
+* Norwegian: {{t|no|kutt|n}}
 * Portuguese: {{t+|pt|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
 * Turkish: {{t|tr|kesme}}
