/* Adjective */ Adverb <caught#8833744>

--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -11,8 +11,8 @@
 *{{audio|en-uk-caught.ogg|Audio (UK)}}
 *:{{rhymes|ɔːt}}
 
-===Adjective===
-{{en-adj|-}}
+===Adverb===
+{{en-adv|-}}
 
 # {{cricket}} Of the [[method]] of being [[out]] in which the [[striker]] hits the ball and a [[fielder]] catches it.
 
