--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -159,7 +159,7 @@ From {{etyl|enm}} ''[[counten#Middle English|counten]]'' from {{etyl|xno}} ''[[c
 From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 
 ====Noun====
-{{en-noun}}
+{{en-noun}} {{m}}
 
 # The male ruler of a [[county]]; also known as an [[earl]], especially in England. The female equivalent is [[countess]].
 
