--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -184,7 +184,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 * Latin: {{t-|la|comes|m}}
 * Lithuanian: {{t-|lt|grafas|m|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|гроф|m|tr=grof}}
-* Old English: {{t-|ang|eorl|m|xs=Old English}}
+* [[Old English]]: {{t-|ang|eorl|m|xs=Old English}}
 * [[Old French]]: {{tø|fro|comte|m}},  {{tø|fro|conte|m}},  {{tø|fro|cunte|m}}
 * Polish: {{t+|pl|hrabia|m}}
 * Portuguese: {{t+|pt|conde|m}}
