--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -66,7 +66,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
 * [[Gujarati]]: {{t|gu|ફ્રાન્સ|sc=Gujr|xs=Gujarati}}
 * [[Haitian Creole]]: [[Frans]]
-* Hebrew: {{t+|he|צרפת|f|alt=צָרְפַת|tr=tsarfat}} (''classical:'' Ṣārəphath)}}
+* Hebrew: {{t+|he|צרפת|f|alt=צָרְפַת|tr=tsarfat}} (''classical:'' Ṣārəphath)
 * Hindi: {{t|hi|फ़्रांस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्राँस|tr=frām̐s|xs=Hindi}} <!-- ??? -->
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
