--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -106,7 +106,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
 * [[Novial]]: [[Fransia]]
 * [[Occitan]]: [[França]]
-* Old English: [[Francland]]
+* [[Old English]]: [[Francland]]
 * [[Ossetian]]: [[Франц]] (Frants)
 * Persian: {{t+|fa|فرانسه|tr=frânseh|xs=Persian}}
 * Polish: {{t+|pl|Francja|f}}
