--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -3,7 +3,7 @@
 {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 ===Etymology===
-(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{en}} ''[[sheen]]'' "beautiful" (from {{enm}} ''[[schene#Middle English|schene]]'' "beautiful", from {{ang}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{enm}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{ang}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful").
+(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{en}} ''[[sheen]]'' "beautiful" (from {{enm}} ''[[schene#Middle English|schene]]'' "beautiful", from {{ang}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{enm}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{ang}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful".
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
