--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -12,7 +12,7 @@
 
 ====Translations====
 {{trans-top|country in Central Europe}}
-* Arabic: {{Arab|[[جمهورية التشيك]]}} (Jumhuuriyyah al-Tshik),  {{t|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik|sc=Arab}},  {{t|ar|التشيك|m|tr=al-tshik|sc=Arab}}
+* Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik|sc=Arab}},  {{t|ar|التشيك|m|tr=al-tshik|sc=Arab}}
 * Armenian: [[Չեխիայի Հանրապետություն]] (Čexiayi Hanrapetut'yun)
 * [[Azeri]]: {{t-|az|Çex Respublikası|xs=Azeri}}
 * Bosnian: {{t-|bs|Češka Republika|f}}
@@ -32,14 +32,14 @@
 * French: la [[République tchèque]] {{f}}
 * German: {{t+|de|Tschechische Republik}},  {{t|de|Tschechien|n}}
 * Greek: {{t-|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías}}
-* Hebrew: [[הרפובליקה הצ׳כית]] (ha'republiqa ha'chekhit),  {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}
-* Hindi: [[चेक रिपब्लिक]] (ćik ripablik),  {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
+* Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}
+* Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
 * [[Interlingua]]: [[Republica Chec]]
 * Italian: la [[repubblica Ceca]] {{f}}
 * Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t-|ja|チェコ共和国|tr=Cheko-kyōwakoku}}({{Jpan|ちぇこきょうわこく}})
 * Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl|xs=Kazakh}}
-* Korean: [[체코 공화국]] (cheko gong-hwaguk),  {{t|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Kore}},  {{t|ko|체코|tr=Cheko|sc=Kore}}
+* Korean: {{t|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Kore}},  {{t|ko|체코|tr=Cheko|sc=Kore}}
 * Kurdish: [[Komara Çêkiyayê]]
 * Latvian: [[Čehijas Republika]] {{f}}
 {{trans-mid}}
@@ -48,12 +48,12 @@
 * Maltese: ir-[[Repubblika Ċeka]]
 * Navajo: {{tø|nv|Chek bikéyah}}
 * Norwegian: {{t+|no|Tsjekkia}}, {{t-|no|Den tsjekkiske republikk}}
-* Persian: {{t-|fa|جمهوری چک|xs=Persian}},  {{t|fa|جمهوری چک|tr=Jomhuri-ye Chek|sc=fa-Arab}},  {{t|fa|چک|tr=Chek|sc=fa-Arab}}
+* Persian: {{t-|fa|جمهوری چک|tr=Jomhuri-ye Chek|sc=fa-Arab}},  {{t|fa|چک|tr=Chek|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}
 * [[Pontic Greek]]: {{tø|pnt|Δημοκρατίαν τη Τσεχίας}}
 * Portuguese: {{t+|pt|República Tcheca}}
 * Romanian: {{t+|ro|Republica Cehă|f}}
-* Russian: [[Чешская Республика]] {{f}},  {{t|ru|Чешская Республика|f|tr=Čéšskaja Respúblika|sc=Cyrl}},  {{t|ru|Чехия|f|tr=Čéxija|sc=Cyrl}}
+* Russian: {{t|ru|Чешская Республика|f|tr=Čéšskaja Respúblika|sc=Cyrl}},  {{t|ru|Чехия|f|tr=Čéxija|sc=Cyrl}}
 * [[Scottish Gaelic]]: an t-{{t-|gd|Seic|f|xs=Scottish Gaelic}}
 * Serbian:
 *: Cyrillic: [[Чешка Република]] {{f}}
@@ -65,7 +65,7 @@
 * Swedish: [[Tjeckien]], [[Republiken Tjeckien]]
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}
 * Turkmen: {{t|tk|Çeh Republikasy|xs=Turkmen}}
-* Ukrainian: [[Чеська Республіка]],  {{t|uk|Чеська Республіка|f|tr=Čés'ka Respúblika|sc=Cyrl}}
+* Ukrainian: {{t|uk|Чеська Республіка|f|tr=Čés'ka Respúblika|sc=Cyrl}}
 * [[Uyghur]]: {{t-|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab|xs=Uyghur}}
 * Uzbek: {{t|uz|Chex Respublikasi|xs=Uzbek}}
 * Vietnamese: {{t-|vi|Cộng hòa Séc|xs=Vietnamese}},  {{t|vi|Séc}}
