--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}}
+From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[free]], having liberty, at liberty|lang=es}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈliː.bɹə/}}, {{SAMPA|/"li:.br@/}}
