--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -15,7 +15,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 {{en-noun|-}}
 
 # The [[sound]] caused by the discharge of atmospheric electrical charge.
-#: '''''Thunder''' ''is preceded by lightning.''
+#: '''''Thunder''' ''is preceded by [[lightning]].''
 # A sound resembling thunder.
 # A deep, [[rumble|rumbling]] noise.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
