added inflection line for Scots/Verb, header -Cognates +Counter <brick#8874911>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -232,16 +232,19 @@ From English ''[[brig]]''.
 # A [[fritter]] with a filling.
 
 ----
+
 ==Scots==
 
 ===Etymology===
 {{etyl|ang}} {{term|brecan|lang=ang}}. Compare Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, and Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽|sc=Goth|tr=brikan|lang=got}}. Cognate with Latin {{term|frangere||to break}}.
 
 ===Verb===
+{{infl|sco|verb}}
+
 # {{South Scots}} to [[break]]
 #: ''Make shair ee deh '''brick''' yon vase!''
 
-====Cognates====
+====Counter====
 * [[brack]] (Doric)
 
 [[ar:brick]]
