--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -45,7 +45,7 @@
 * Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, ''short:'' {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, ''abbr.:'' {{t-|he|ארה״ב|tr=ARH-B}}
 * {{trreq|Hiligaynon}}
 * Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=Sa.nyukta Rājya Amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=Sa.nyukta Raštra Amrīkā|xs=Hindi}}
-* Hungarian: {{t+|hu|Amerikai Egyesült Államok}}
+* Hungarian: {{t+|hu|Amerikai Egyesült Államok}},  {{t|hu|Egyesült Államok}},  {{t|hu|USA}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
 * [[Interlingua]]: [[Statos Unite de America]]
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t|ga|Meiriceá|xs=Irish}}
