/* Derived terms */ <come#8907023>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -49,6 +49,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[come about]]
 * [[come across]]
 * [[come after]]
+* [[come aloft]]
 * [[come along]]
 * [[come around]]
 * [[come at]]
@@ -57,8 +58,8 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[come clean]]
 * [[come down]]
 * [[come forward]]
-* [[come into]]
 {{rel-mid}}
+* [[come into]]
 * [[come off]]
 * [[come off it]]
 * [[come on]]
