--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -236,7 +236,7 @@ From English ''[[brig]]''.
 ==Scots==
 
 ===Etymology===
-{{etyl|ang}} {{term|brecan|lang=ang}}. Compare Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, and Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽|sc=Goth|tr=brikan|lang=got}}. Cognate with Latin {{term|frangere||to break}}, [[brack]] (Doric)
+{{etyl|ang|sco}} {{term|brecan|lang=ang}}. Compare Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, and Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽|sc=Goth|tr=brikan|lang=got}}. Cognate with Latin {{term|frangere||to break}}, [[brack]] (Doric)
 
 ===Verb===
 {{infl|sco|verb}}
