--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -54,8 +54,8 @@
 * Hungarian: {{t-|hu|megválaszt}}
 * Icelandic: {{t+|is|velja}}
 * [[Ilocano]]: [[pili]]
-{{trans-mid}}
 * Indonesian: {{t+|id|memilih|xs=Indonesian}}, {{t+|id|pilih|xs=Indonesian}}
+{{trans-mid}}
 * Italian: {{t+|it|eleggere}}
 * Japanese: {{t-|ja|選ぶ|tr=えらぶ, erabu}}
 * Korean:  {{t+|ko|고르다|tr=goreuda|sc=Hang}}
@@ -69,6 +69,7 @@
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
 * Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}},  {{t+|ru|выбрать|tr=výbrat’}} {{pf}},  {{t+|ru|избирать|tr=izbirát’}} {{impf}},  {{t+|ru|избрать|tr=izbrát’}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|tagh}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
@@ -112,6 +113,7 @@
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
 * Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}},  {{t+|ru|выбрать|tr=výbrat’}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|tagh}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: {{t+|sl|izbrati}}
 * Spanish: {{t+|es|escoger}}
@@ -139,6 +141,7 @@
 * Portuguese: {{t+|pt|escolher}},  {{t+|pt|escolher|m}}
 * Romanian: {{t-|ro|vrea}}, {{t+|ro|prefera}}
 * Russian: {{t|ru|решать|tr=rešát'}} {{impf}},  {{t+|ru|решить|tr=rešít'}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|tagh}}
 * Serbian: {{t-|sr|odlučiti}}, {{t|sr|odabrati}}
 * Spanish: {{t+|es|escoger}},  {{t+|es|elegir}}
 {{trans-bottom}}
