t+li:[[sjoen]] ([[WT:EDIT|Assisted]]) <beautiful#8944672>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -135,6 +135,7 @@
 {{trans-mid}}
 * Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
 * Kurdish: {{ku-Arab|[[خۆش]]}}, {{ku-Arab|[[فێنک]]}}
+* [[Limburgish]]: {{t|li|sjoen}}
 * [[Macedonian]]: {{t|mk|убаво|n|tr=úbavo}}
 * Spanish: {{t+|es|bueno}},  {{t+|es|despejado}},  {{t-|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
