--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -93,6 +93,7 @@
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt)
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
+* [[Limburgish]]: {{t|li|sjoen}}
 * [[Macedonian]]: {{t|mk|убав|m|tr=úbav}},  {{t|mk|убава|f|tr=úbava}},  {{t|mk|убаво|n|tr=úbavo}},  {{t-|mk|прекрасен|m|tr=prékrasen}},  {{t|mk|прекрасна|f|tr=prékrasna}},  {{t|mk|прекрасно|n|tr=prékrasno}}
 * Navajo: {{tø|nv|nizhóní}}
 * [[Novial]]: [[beli]]
