--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -43,7 +43,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 * French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}
 * German: {{t+|de|und so weiter}}, {{t+|de|usw.}}, {{t+|de|etc.}}, {{t-|de|et cetera}}
 * Hebrew: [[וכדומה]]
-* Hungarian: [[satöbbi]], [[stb.]], [[(é)s a többi]], [[és így tovább]], [[s. í. t.]]
+* Hungarian: [[satöbbi]], [[stb.]], [[és a többi]], [[s a többi]], [[és így tovább]]
 * Icelandic: [[og svo framvegis]], [[o. s. frv.]]
 * Italian: {{t+|it|eccetera}}
 * Japanese: [[など]] (nado), [[等]] (とう, tō)
