added synonyms <count#8961150>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -163,6 +163,15 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 
 # The male ruler of a [[county]]; also known as an [[earl]], especially in England. The female equivalent is [[countess]].
 
+====Synonyms====
+* [[baron]]
+* [[don]]
+* [[duke]]
+* [[earl]]
+* [[lord]]
+* [[prince]]
+* [[viscount]]
+
 =====Translations=====
 {{trans-top|the male ruler of a county}}
 * Armenian: {{t-|hy|կոմս|tr=koms}}
