iwiki +[[:et:United States of America]] <United States of America#8968292>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -116,6 +116,7 @@
 [[ar:United States of America]]
 [[az:United States of America]]
 [[zh-min-nan:United States of America]]
+[[et:United States of America]]
 [[el:United States of America]]
 [[fr:United States of America]]
 [[gl:United States of America]]
