--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -164,7 +164,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 
 # The male ruler of a [[county]]; also known as an [[earl]], especially in England. The female equivalent is [[countess]].
 
-====Synonyms====
+=====Synonyms=====
 * [[baron]]
 * [[don]]
 * [[duke]]
