--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -172,6 +172,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[Middle High German]]: [[pflūme]], [[pfrūme]]
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Old High German]]: [[pfrūma]]
+* [[Papiamentu]]: {{tø|pap|preimu}}
 * Persian: {{t|fa||tr=ālū|xs=Persian}}
 * Polish: {{t+|pl|śliwka|f}}
 * Portuguese: {{t+|pt|ameixa|f}}
@@ -218,6 +219,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Latvian: [[plūme]] {{f}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
+* [[Papiamentu]]: {{tø|pap|preimu}}
 * Polish: {{t+|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}, {{t+|pt|ameixa|f}}
 * Romanian: {{t+|ro|prun|m}}
