t+fi:[[vaaleaverikkö]] ([[WT:EDIT|Assisted]]) <blond#8975152>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -27,6 +27,7 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 * Danish: [[lyshåret]]; blond, [[blondine]]
 * Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}, {{t-|eo|blondulino|xs=Esperanto}}
+* Finnish: {{t|fi|vaaleaverikkö}}
 * French: {{t+|fr|blond}}, {{t+|fr|blonde}}
 * German: [[Blond]] mann, die [[Blondine]]
 * Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
