--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -33,10 +33,11 @@
 * Esperanto: {{t-|eo|felto|xs=Esperanto}}
 * Finnish: [[huopa]] (1)
 * French: [[feutre]] {{m}}, [[feutrine]] {{f}}
-{{trans-mid}}
 * German: {{t+|de|Filz|n}}
+{{trans-mid}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
 * [[Ido]]: {{t+|io|felto|xs=Ido}}
+* Italian: [[feltro]] {{m}}
 * Norwegian: {{t-|no|filt|m}}
 * Russian: {{t+|ru|фетр|m}}
 * Spanish: {{t-|es|fieltro|m}}
