--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -124,6 +124,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Greek: [[οπτόπλινθος]] {{m}}, [[τούβλο]] {{n}} (''informal'')
 * Icelandic: [[múrsteinn]] {{m}}, [[byggingarklossar]] {{m|p}}, [[byggingarkubbar]] {{n|p}}
 * Latvian: [[ķieģelis]] {{m}}
+* Romanian: {{t|ro|cărămidă}}
 * Slovene: {{t+|sl|opeka}}
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t-|sv|tegel|n}}
