--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,7 +16,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 {{en-adv|-}}
 
 # {{context|[[abbreviation]]|[[initialism]]}} Literally, “for example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
-#: ''Asia is a large continent, with many large nations with small dicks ('''e.g.''', China, India, and Russia).''
+#: ''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Russia).''
 
 ====Usage notes====
 * The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].
@@ -68,7 +68,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * [[Scottish Gaelic]]: {{t-|gd|me|xs=Scottish Gaelic}}
 * Serbian:
 *: Cyrillic: [[нпр.]] {{i|[[на]] [[пример]]}}
-*: poopy: [[npr.]] {{i|[[na]] [[primer]]}}
+*: Roman: [[npr.]] {{i|[[na]] [[primer]]}}
 * Slovak: [[napr.]] {{i|[[napríklad]]}}
 * Slovene: [[npr.]] {{i|[[na]] [[primer]]}}
 * Spanish: {{t+|es|por ejemplo}}
