--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -32,7 +32,8 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 * Bosnian: {{t-|bs|suknja|f}}
 * Bulgarian: {{t+|bg|пола|f}}
 * [[Chamicuro]]: {{tø|ccc|ita'la}}
-* Chinese: [[裙]] (qún)
+* Chinese:
+*: Mandarin: {{t|zh|裙子|tr=qúnzi|sc=Hani}}, {{t|zh|裙|tr=qún|sc=Hani}}
 * Croatian: {{t+|hr|suknja|f|alt=sȕknja}}
 * Czech: {{t+|cs|sukně|f}}
 * Danish: {{t-|da|nederdel|c}}, {{t-|da|skørt|n}}
