--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -62,10 +62,10 @@ Radical: [[日]] + [[正]]
 # [[is]]; to [[be]]
 
 [[Category:Mandarin entries with audio links]]
-[[Category:zh-cn:Beginning Mandarin|shi4]]
 [[Category:Mandarin pronouns in simplified script|shi4]]
-[[Category:zh-tw:Beginning Mandarin|日05]]
 [[Category:Mandarin pronouns in traditional script|日05]]
+[[Category:zh-cn:Beginning Mandarin|shi4]]
+[[Category:zh-tw:Beginning Mandarin|日05]]
 
 ----
 
@@ -80,10 +80,11 @@ Radical: [[日]] + [[正]]
 
 ==Wu==
 {{zh-attention}}
-===Pronunciation===
-{{rfp}}
 
-===Alternative spelligns===
+===Pronunciation===
+{{rfp|lang=wuu}}
+
+===Alternative spellings===
 Latin Alphabet: sz´
 
 Zhuyin Fuhao: ㄙˊ
