t+lv:[[grāfs]] t+lv:[[skaitīt]] t+sv:[[räkna]] t+lv:[[rēķināt]] t+da:[[nedtælling]] t+da:[[tælling]] t+da:[[optælling]] ([[WT:EDIT|Assisted]]) <count#8996954>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -24,6 +24,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Bulgarian: {{t|bg|смятане|n}}
 * [[Catalan]]: {{t|ca|comptage|m}}, {{t+|ca|compte|m}}
 {{trans-mid}}
+* Danish: {{t|da|tælling}}
 * French: {{t+|fr|compter}}
 {{trans-bottom}}
 
@@ -35,6 +36,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Catalan]]: {{t+|ca|compte|m}}
 * [[Classical Nahuatl]]: {{tø|nci|pōhualli}}
 * Czech: {{t+|cs|počet|n}}
+* Danish: {{t|da|optælling}}
 * Dutch: {{t+|nl|telling|f}}
 * Finnish: {{t+|fi|määrä}}
 * French: {{t+|fr|compte}}
@@ -55,6 +57,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Armenian: {{t-|hy|հաշվարկ|tr=hašvark}}
 * Bulgarian: {{t|bg|отброяване|n}}
 * Czech: [[odpočet]] {{n}}
+* Danish: {{t|da|nedtælling}}
 * Dutch: {{t-|nl|aftelling|f}}
 * Finnish: {{t-|fi|lähtölaskenta}}
 * French: {{t+|fr|compte à rebours}}
@@ -127,6 +130,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Italian: {{t+|it|contare}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Latin: {{t+|la|numero}}, {{t-|la|computo}}
+* Latvian: {{t|lv|skaitīt}},  {{t|lv|rēķināt}}
 * [[Macedonian]]: {{t|mk|брои|tr=brói}}
 * Malay: {{t+|ms|kira|xs=Malay}}
 * [[Middle English]]: {{tø|enm|counten}}
@@ -141,6 +145,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Russian: [[считать]] ''imperf''
 * Slovene: [[šteti]], [[prešteti]]
 * Spanish: {{t+|es|contar}}
+* Swedish: {{t|sv|räkna}}
 * [[Telugu]]: [[లెక్కించు]] (lekkiMchu)
 {{trans-bottom}}
 
@@ -192,6 +197,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 * Italian: {{t+|it|conte}}
 {{trans-mid}}
 * Latin: {{t-|la|comes|m}}
+* Latvian: {{t|lv|grāfs}}
 * Lithuanian: {{t-|lt|grafas|m|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|гроф|m|tr=grof}}
 * [[Old English]]: {{t-|ang|eorl|m|xs=Old English}}
