iwiki +[[:ko:curtain]] <curtain#9000973>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -117,6 +117,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[de:curtain]]
 [[fa:curtain]]
 [[fr:curtain]]
+[[ko:curtain]]
 [[hy:curtain]]
 [[hr:curtain]]
 [[io:curtain]]
