--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -22,6 +22,7 @@ From the root {{term|ש-ב-ע||sc=Hebr|tr=sh-v-`}}.
 [[lo:שבוע]]
 [[lt:שבוע]]
 [[pl:שבוע]]
+[[pt:שבוע]]
 [[ro:שבוע]]
 [[ru:שבוע]]
 [[tr:שבוע]]
