t+nl:[[cellen]] ([[WT:EDIT|Assisted]]) <pen#9008271>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -40,7 +40,7 @@
 {{trans-bottom}}
 
 {{trans-top|prison cell}}
-* Dutch: {{t|nl|cel|f}}
+* Dutch: {{t|nl|cel|f}},  {{t|nl|cellen|f|p}}
 * Finnish: {{t+|fi|selli}}, {{t+|fi|häkki}}
 * Greek: {{t+|el|κελί|n|tr=kelí}}
 * Italian: {{t-|it|cella|f}}
