--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -4,7 +4,7 @@
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Etymology===
-{{etyl|enm}} {{term|cutten|cutten, kytten|lang=enm}} "to cut" (cf {{etyl|sco|-}} {{term|kit|lang=sco}} "to cut") from {{etyl|ang}} *{{term||cyttan|lang=ang}} "to cut" from {{proto|Germanic|kutjanan, *kuttanan|to cut|lang=en}}. Akin to {{etyl|non|-}} {{term|kuti|lang=non}} "small knife", Old {{etyl|sv|-}} {{term|kotta|lang=sv}} "to cut", {{etyl|no|-}} {{term|kutte|lang=no}} "to cut".
+From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{etyl|sco|-}} {{term|kit||to cut|lang=sco}}), from {{etyl|ang}} *{{term||cyttan|to cut|lang=ang}}, from {{proto|Germanic|kutjanan, *kuttanan|to cut|lang=en}}. Akin to {{etyl|non|-}} {{term|kuti||small knife|lang=non}}, Old {{etyl|sv|-}} {{term|kotta||to cut|lang=sv}}, {{is}} {{term|kuta||to cut with a knife|lang=is}}, {{etyl|no|-}} {{term|kutte||to cut|lang=no}}.
 
 ===Pronunciation===
 * {{IPA|/kʌt/}}, {{SAMPA|/"kVt/}}
