no definition line for Vietnamese/Han character added {defn} <慚#9025223>

--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -52,8 +52,11 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''慚''' ([[tàm]], [[tuồm]], [[tam]], [[tom]], [[tùm]])
+
+# {{defn|Vietnamese}}
 
 [[fr:慚]]
 [[ja:慚]]
