--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -5,14 +5,14 @@
 
 {{rank|free|return|call|354|speak|land|why|women}}
 
+===Etymology===
+From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|specan|specan|to speak|lang=ang}}, alteration of earlier {{term|sprecan|sprecan|to speak|lang=ang}}, from {{proto|Germanic|sprekanan|to speak, make a sound|lang=en}}, from {{proto|Indo-European|spreg-|to make a sound, utter, speak|lang=en}}. Cognate with Dutch {{term|spreken||to speak|lang=nl}}, German {{term|sprechen||to speak|lang=de}}, {{sq}} {{term|shpreh||to utter, voice, express|lang=sq}}.
+
 ===Pronunciation===
 * {{enPR|spēk}}, {{IPA|/spiːk/}}, {{SAMPA|/spi:k/}}
 * {{audio|en-us-speak.ogg|Audio (US)}}
 * {{audio|En-uk-to speak.ogg|Audio (UK)}}
 *: {{rhymes|iːk}}
-
-===Etymology===
-{{etyl|ang}} ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]'', cf. German ''[[sprechen]]'', Dutch ''[[spreken]]''.
 
 ===Verb===
 {{en-verb|'''[[speaks]]''' ''or {{archaic}}'' '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or {{archaic}}'' '''[[spake]]'''|spoken}}
