--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -11,7 +11,7 @@
 
 ====References====
 * {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
-
+*Shuowen Jiezi: volume 15, page 46, character 18. http://kanji.zinbun.kyoto-u.ac.jp/db-machine/toho/html/A0200003.html
 ----
 
 ==Cantonese==
