--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -104,6 +104,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 [[ja:zenith]]
 [[pl:zenith]]
 [[ru:zenith]]
+[[sv:zenith]]
 [[ta:zenith]]
 [[te:zenith]]
 [[th:zenith]]
