/* Verb */ + 2 more senses (oh joy) <cut#9060183>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -250,6 +250,11 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 #: ''If you '''cut''' then I'll deal.''
 # {{slang}} To [[dilute]] a liquid, usually [[alcohol]].
 #: ''The bartender '''cuts''' his beer to save money and now it's all watery.''
+# {{dated}} To [[ignore]] as a social [[snub]].
+#: ''After the incident at the dinner party, people started to '''cut''' him on the street.''
+# {{slang|transitive}} To [[stab]] (a person).
+#* '''1990''', Stephen Dobyns, ''The house on Alexandrine''
+#*: We don't want your money no more. We just going to '''cut''' you.
 
 ====Troponyms====
 * [[chop]]
