iwiki +[[:sv:curve]] <curve#9063902>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -287,6 +287,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[ru:curve]]
 [[simple:curve]]
 [[fi:curve]]
+[[sv:curve]]
 [[ta:curve]]
 [[te:curve]]
 [[tr:curve]]
