--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative spellings===
-* [[blonde]] (US)
+* [[blonde]] THERE ARE NO ALTERNATIVE SPELLINGS! (US)
 
 ===Etymology===
 From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||blund|lang=frk}} "a mixed color between golden and light-brown" from {{proto|Germanic|blund-|mixed, blinding|lang=en}} from {{proto|Indo-European|bhlendh-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax||lang=ang}} "grey-haired", {{etyl|ang|-}} {{term|blandan|lang=ang}} "to mix". More at {{l|en|blend}}.
