t+ro:[[cortină]] t+ro:[[perdea]] ([[WT:EDIT|Assisted]]) <curtain#9072193>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -48,6 +48,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Persian: {{t+|fa|پرده|tr=pardeh|xs=Persian}}
 * Polish: {{t|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
+* Romanian: {{t|ro|perdea|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanav'éska}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{tø|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}}; {{tø|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
@@ -74,6 +75,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Persian: {{t+|fa|پرده|tr=pardeh|xs=Persian}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|cortina|f}}
+* Romanian: {{t|ro|cortină|f}}
 * Russian: {{t+|ru|занавес|m|tr=zánav'es}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{tø|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}} ; {{tø|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
