--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -7,7 +7,7 @@
 Radical: [[日]] + [[正]]
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[曰]][[正]]}}
 
 # [[indeed]], [[yes]], [[right]]
 # to [[be]]
