--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -17,7 +17,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 # drugs
 #: '''''substance''' abuse''
 #Nutritional
-#''John, don't eat any french fries today; you need to eat something with '''substance'''.''
+#:''John, don't eat any french fries today; you need to eat something with '''substance'''.''
 
 ====Related terms====
 * [[stand under]]
