--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|fro}} ''[[#French|substance]]''.
+From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|substantia||substance, essence|lang=la}}, from {{term|substans|substāns|lang=la}}, present active participle of {{term|substo|substō|exist; literally, stand under|lang=la}}, from {{term|sub|lang=la}} + {{term|sto|stō|stand|lang=la}}.
 
 ===Pronunciation===
 * {{audio|en-us-substance.ogg|Audio (US)}}
@@ -140,7 +140,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 ==French==
 
 ===Etymology===
-From {{etyl|la|fr}} ''[[substantia]]'', '''substance''' or '''essence''', noun form from present participle ''[[substans]]'', from ''[[substare]]'', '''[[exist]]''', lit. '''stand under''', from ''[[stare]]'', '''[[stand]]'''
+From {{etyl|la|fr}} {{term|substantia||substance, essence|lang=la}}, from {{term|substans|substāns|lang=la}}, present active participle of {{term|substo|substō|exist; literally, stand under|lang=la}}, from {{term|sub|lang=la}} + {{term|sto|stō|stand|lang=la}}.
 
 ===Pronunciation===
 * {{audio|Fr-substance.ogg|audio}}
