--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -115,6 +115,7 @@
 
 {{trans-top|remove (something) from circulation}}
 {{trans-mid}}
+* French: {{t|fr|retirer}}
 {{trans-bottom}}
 
 {{trans-top|do, perform}}
