/* Translations */ added Dutch translations <cut#9086570>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -351,9 +351,10 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * [[Afrikaans]]: {{t-|af|sny|xs=Afrikaans}}
 * Armenian: {{t-|hy|կտրել|tr=ktrel}}
 * Danish: [[udelukke]]
+* Dutch: {{t|nl|scheiden}}
 * Finnish: {{t+|fi|leikata}}
-* German: {{t+|de|trennen}}
 {{trans-mid}}
+* German: {{t+|de|trennen}}
 * Portuguese: {{t+|pt|remover}}, {{t+|pt|retirar}}
 * Spanish: {{t-|es|retirar}}
 * Swedish: [[utesluta]] (''from a team''), [[klippa bort]] (''remove a portion during editing of a tape'')
@@ -361,7 +362,8 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 
 {{trans-top|to enter a queue in a wrong place}}
 * Armenian: {{t-|hy|կտրել|tr=ktrel}}
-* Danish: [[snyde]]
+* Danish: {{t|da|snyde}}
+* Dutch: {{t|nl|voorsteken}}
 * Finnish: {{t-|fi|etuilla}}
 * Icelandic: {{t-|is|troða|alt=troðast}},  {{t-|is|troða|alt=troða sér}}
 {{trans-mid}}
@@ -372,6 +374,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{trans-bottom}}
 
 {{trans-top|to cease recording}}
+* Dutch: {{t|nl|knippen}}, {{t|nl|stoppen}}
 * French: {{t+|fr|couper}}
 * German: {{t-|de|klappe}}
 * Portuguese: {{t+|pt|cortar}}
@@ -449,7 +452,6 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{checktrans-top}}
 * {{ttbc|Albanian}}: [[pret]]
 * {{ttbc|Croatian}}: [[rezati]]
-* {{ttbc|Dutch}}: [[snijden]], [[afsnijden]], [[knippen]]
 * {{ttbc|Dyirbal}}: [[nudin]], [[gunban]], [[banyin]] ([[Guwal]]); [[jalnggan]], [[bubaman]] ([[Jalnguy]])
 * {{ttbc|Esperanto}}: [[tranĉi]], [[fasoni]]
 * {{ttbc|Hungarian}}: [[vág]]
