--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -5,7 +5,7 @@
 {{rank|old|came|men|107|come|without|make|def}}
 
 ===Etymology===
-{{etyl|ang}} {{term|cuman|lang=ang}} from {{proto|Indo-European|gʷem-}}. Cognates include Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}, Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, Latin {{term|venio|veniō|lang=la}}, German {{term|kommen|lang=de}}, Swedish {{term|komma|lang=sv}}.
+{{etyl|enm}} {{term|comen|lang=enm}}, from {{etyl|ang}} {{term|coman|lang=ang}}, from {{proto|Germanic|kwemanan}} (cf. West Frisian {{term|komme|lang=fy}}, Dutch {{term|komen|lang=nl}}, German {{term|kommen|lang=de}}), from {{proto|Indo-European|gʷem-}} (cf. Latin {{term|venio|veniō|lang=la}}, Tocharian [[w:Tocharian A|A]] {{term|kumnäs|lang=xto}}, [[w:Tocharian B|B]] {{term|känmask|lang=xtb}}, Lithuanian {{term|gimti|lang=lt}} 'to be born', Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, ''báskein'' 'to walk, go', Avestan ''ǰamaiti'' 'to go', Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}).
 
 ===Pronunciation===
 * {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{SAMPA|/kVm/}}
