--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -83,6 +83,7 @@ Shares offered to the public:
 * Dutch: [[vlottende kommagetal]] {{n}}
 * Finnish: {{t-|fi|liukuluku}}
 {{trans-mid}}
+* French: {{t|fr|liukuluku}}
 * German: {{t-|de|Float|n}}
 {{trans-bottom}}
 
