--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -124,7 +124,7 @@
 * Finnish: {{t+|fi|peittää}}
 * Greek: {{t|el|επιστρώνω|tr=epistróno|sc=Grek}}, {{t|el|καλύπτω|tr=kalýpto|sc=Grek}}
 {{trans-mid}}
-* Swahili: {{t+|sw|koti|xs=Swahili}},  {{t+|sw|koti|xs=Swahili}}
+* Swahili: {{t+|sw|koti|xs=Swahili}}
 * Swedish: {{t+|sv|täcka}}
 {{trans-bottom}}
 
