iwiki +[[:es:flesh]] <flesh#9110049>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -185,6 +185,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 [[Category:Colors]]
 [[Category:Oranges]]
 
+[[es:flesh]]
 [[fr:flesh]]
 [[io:flesh]]
 [[kn:flesh]]
