--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -44,7 +44,7 @@
 * French: {{t+|fr|olive|f}}
 * [[Galician]]: [[oliva#Galician|oliva]] {{f}}
 * German: {{t+|de|Olive}}
-* Greek: {{t|el|ελαία|f|tr=eléa}}, {{t+|el|ελιά|f|tr=eliá}}
+* Greek: {{t+|el|ελιά|f|tr=eliá}}, {{qualifier|formal}} {{t|el|ελαία|f|tr=elaía}}
 * Hebrew: [[זית]] (zait)
 * Hindi: {{t-|hi|ज़ैतून|tr=zaitūn|xs=Hindi}}
 {{trans-mid}}
@@ -95,7 +95,7 @@
 * Croatian: {{t-|hr|maslinasta|alt=màslinastā}} {{t+|hr|boja|f|alt=bòja}}
 * Dutch: {{t+|nl|olijfgroen|n}}
 * Finnish: {{t+|fi|oliivinvihreä}}
-* Greek: [[λαδί]] (laðí) {{n}}, [[κιτρινοπράσινο]] (kitrinoprásino) {{n}}, [[σταχτοπράσινο]] (staxtoprásino) {{n}}
+* Greek: {{t|el|λαδί|n|tr=ladí}}
 * Japanese: [[オリーブ色]] (orību, oriibu-iro)
 * Korean: [[올리브색]]
 * Kurdish: [[zeytûnî]], [[rengzeytûnî]]
