iwiki +[[:es:branch]] <branch#9113322>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -216,6 +216,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 [[de:branch]]
 [[et:branch]]
 [[el:branch]]
+[[es:branch]]
 [[fa:branch]]
 [[fr:branch]]
 [[hy:branch]]
