--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -33,6 +33,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 
 [[et:pajamas]]
 [[fa:pajamas]]
+[[io:pajamas]]
 [[pl:pajamas]]
 [[vi:pajamas]]
 [[zh:pajamas]]
