t+pt:[[hétero]] ([[WT:EDIT|Assisted]]) <straight#9136176>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -150,6 +150,7 @@
 * Irish: {{t-|ga|díreach|xs=Irish}}
 * Italian: {{t+|it|eterosessuale}}
 * Japanese: {{t|ja|ノンケの|tr=nonke no}}
+* Portuguese: {{t|pt|hétero|m|f}}
 * Spanish: {{t+|es|heterosexual}}
 {{trans-bottom}}
 
