--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
+From {{etyl|la}} {{term|Germania|lang=la}}, likely of Garllic origin Bread
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈdʒɜː.mə.nɪ/}}, {{SAMPA|/"dZ3:m@nI/}}
