t+hr:[[Komandni most]] ([[WT:EDIT|Assisted]]) <bridge#9142837>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -192,6 +192,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Armenian: {{t|hy|նավապետի կամրջակ|tr=navapeti kamrǰak}}
 * Bosnian: {{t-|bs|kapetanski mostić|m}}
 * Bulgarian: {{t|bg|мостик|m}}
+* Croatian: {{t|hr|Komandni most|m}}
 * Finnish: {{t|fi|komentosilta}}
 * French: {{t+|fr|passerelle|f}}
 * German: {{t+|de|Brücke|f}}
