--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -84,7 +84,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * French: {{t+|fr|pont|m}}
 * Georgian: {{t-|ka|ხიდი|tr=xidi|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Brücke|f}}
-* Greek: [[γέφυρα]] (yéfira)
+* Greek: {{t|el|γέφυρα|f|tr=géfyra}}
 * [[Gujarati]]: [[પુલ]]
 * Hawaiian: {{tø|haw|uapo|xs=Hawaiian}}
 * Hebrew: {{t+|he|גשר|m|tr=gesher}}
@@ -158,7 +158,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Armenian: {{t|hy|քթարմատ|tr=k't'armat}}
 * Danish: {{t|da|næseben|n}}
 * Finnish: {{t|fi|nenän selkä}}
-* Greek: {{t|el|ράχη|f|tr=rákhi}},  {{t|el|άκανθα|f|tr=ákanθa}}
+* Greek: {{t|el|ράχη|f|tr=ráchi}}, {{t|el|άκανθα|f|tr=ákantha}}
 {{trans-mid}}
 * Italian: {{t-|it|setto}} nasale {{m}}
 * Polish: {{t|pl|grzbiet|m}}
@@ -174,7 +174,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Finnish: {{t+|fi|silta}}, {{t|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}},  {{qualifier|Canada}} {{t+|fr|pont|m}}
 * German: {{t+|de|Brücke|f}}
-* Greek: {{t+|el|γέφυρα|f|tr=yéfira}}
+* Greek: {{t|el|γέφυρα|f|tr=géfyra}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 {{trans-mid}}
 * Italian: {{t+|it|ponte|m}}
@@ -196,7 +196,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Finnish: {{t|fi|komentosilta}}
 * French: {{t+|fr|passerelle|f}}
 * German: {{t+|de|Brücke|f}}
-* Greek: {{t+|el|γέφυρα|f|tr=yéfira}}
+* Greek: {{t|el|γέφυρα|f|tr=géfyra}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Polish: {{t|pl|mostek kapitański|m}}
 * Russian: {{t|ru|капитанский мостик|m|tr=kapitánskij móstik}}
@@ -214,7 +214,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 
 {{trans-top|communications}}
 * French: {{t+|fr|pont}}
-* Greek: {{t+|el|γέφυρα|f|tr=yéfira}}
+* Greek: {{t|el|γέφυρα|f|tr=géfyra}}
 {{trans-mid}}
 * Spanish: {{t-|es|pasarela|f}}
 * Swahili: {{t+|sw|daraja|xs=Swahili}}
@@ -228,8 +228,9 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-top|piece on string instruments}}
 * Czech: {{t+|cs|kobylka|f}}
 * Danish: {{t+|da|stol|c}}
-{{trans-mid}}
 * Dutch: {{t+|nl|kam|m}}
+{{trans-mid}}
+* Greek: {{t|el|καβαλάρης|m|tr=kavaláris}}
 * Esperanto: {{t|eo|ponto}}
 {{trans-bottom}}
 
