--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -110,12 +110,11 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * [[Walloon]]: {{t-|wa|brike|xs=Walloon}}
 {{trans-bottom}}
 
-{{rfc-tsort|bad language name Chinese traditional/simplified}}
 {{trans-top|a building material}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * Bulgarian: {{t|bg|тухли|p}}
-* Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
+* {{ttbc|Chinese}}: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 * Danish: [[mursten]] {{c}}
 * Dutch: {{t+|nl|baksteen}}, {{t-|nl|bakstenen}}
 * Finnish: {{t+|fi|tiili}}
@@ -131,9 +130,8 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Swedish: {{t-|sv|tegel|n}}
 {{trans-bottom}}
 
-{{rfc-tsort|bad language name Chinese traditional/simplified}}
 {{trans-top|term for a helpful, reliable person}}
-* Chinese traditional/simplified: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
+* {{ttbc|Chinese}}: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
 * Danish: [[sveske]] {{c}}, [[knag]] {{c}}
 {{trans-mid}}
 * Dutch: [[kanjer]], [[toeverlaat]] {{m}}, [[beschermengel]] {{m}}
