--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -344,7 +344,9 @@ From late {{etyl|non|da}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 ----
 
 ==Norwegian==
-From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=gmq-mno}} {{m}}, from {{etyl|la|no}} {{term|porta|lang=la}} {{f}}.
+
+===Etymology===
+From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{term|portr|lang=gmq-mno}} {{m}}, from {{etyl|la|no}} {{term|porta|lang=la}} {{f}}.
 
 ===Noun===
 {{infl|no|noun|g=m}}
