--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -287,6 +287,7 @@
 * Portuguese: {{t+|pt|tocar}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
+* Spanish: {{t+|es|tocar}}
 * Swedish: {{t+|sv|spela}}
 * Turkish: {{t+|tr|çalmak}}
 {{trans-bottom}}
