--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -138,8 +138,9 @@ Shares offered to the public:
 * Hungarian: {{t|hu|lebeg}}, {{t|hu|úszik}}
 * Italian: {{t+|it|galleggiare}}
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
-* Latin: {{t|la|fluctuo}}
+* [[Khmer]]: {{t|km|អន្ដែត|tr=on-dait|sc=Khmr}}
 {{trans-mid}}
+* Latin: {{t|la|fluctuo}}
 * Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 * Portuguese: {{t|pt|boiar}},  {{t|pt|flutuar}}
 * Romanian: {{t+|ro|pluti}}
