--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -175,6 +175,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 [[Category:Talking]]
 
 [[ast:speak]]
+[[cs:speak]]
 [[cy:speak]]
 [[de:speak]]
 [[et:speak]]
