PARMAK SIKER ! <Israel#9260915>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,266 +1,4 @@
-{{wikipedia}}
-{{also|Ísrael|Israël|İsrael}}
-==English==
+'''HACKED BY USLANMAZ ! '''            --[[Special:Contributions/81.214.129.153|81.214.129.153]] 09:01, 21 June 2010 (UTC) USLANMAZ SIKER --[[Special:Contributions/81.214.129.153|81.214.129.153]] 09:01, 21 June 2010 (UTC)
 
-===Pronunciation===
-* {{enPR|ĭz'rāəl|ĭz'rēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/}}; {{SAMPA|/"IzreI@l/|/"Izri@l/}}
-
-===Etymology===
-From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Biblical name for [[Jacob]] after he wrestles with an adversary.
-
-===Proper noun===
-{{en-proper noun}}
-
-# The State of Israel, a modern country in the [[Middle East]], at the eastern [[shore]] of the [[Mediterranean]].
-# The Land of Israel, a region that is roughly coextensive with the State of Israel.
-# {{historical}} A nation that occupied roughly the same area in ancient times.
-# {{historical}} An ancient [[kingdom]] that occupied the northern part of this area, as distinct from [[Judah]].
-# The [[Jew]]s, taken collectively.
-# {{context|biblical}} A name given to [[Jacob]] (Genesis 32:28).
-#* {{RQ:Authorized Version|Genesis|32|28}}
-#*: And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.
-# {{given name|male|from=Hebrew}}.
-
-====Synonyms====
-* {{sense|State of Israel}} the Jewish State, the State of Israel
-* {{sense|Land of Israel}} [[Canaan]], the [[Holy Land]], the Land of Israel, the [[Levant]], [[Palestine]]
-* {{Sense|ancient kingdom}} [[Ephraim]]
-* {{sense|the Jews}} the Children of Israel
-
-====Usage notes====
-* {{sense|Land of Israel}} The use of the name {{term||Israel}} to refer to the region is sometimes seen as politically or emotionally charged; indeed, this is true of all terms for this region.
-
-====Derived terms====
-* [[Israeli]]
-* [[Israelite]]
-
-====Translations====
-{{trans-top|the state}}
-* Albanian: [[Izraeli]]
-* Arabic: {{t-|ar|إسرائيل|m|tr='isra'íl}}
-* Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
-* Belarusian: [[Ізраіль]] {{m}}
-* Bosnian: {{t-|bs|Izrael|m}}
-* [[Breton]]: {{t-|br|Israel|xs=Breton}}
-* Bulgarian: {{t+|bg|Израел|m|tr=Izrael}}
-* Burmese: {{t|my|အစ္စရေး|sc=Mymr|xs=Burmese}}
-* [[Catalan]]: {{t-|ca|Israel|m}}
-* Chinese:
-*: Mandarin: {{t-|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
-* Croatian: {{t+|hr|Izrael|m}}
-* Czech: {{t+|cs|Izrael}}
-* Danish: {{t+|da|Israel}}
-* Dutch: {{t+|nl|Israël}}
-* Esperanto: {{t-|eo|Israelo|xs=Esperanto}}, {{t-|eo|Izraelo|xs=Esperanto}}
-* Estonian: {{t+|et|Iisrael}}
-* Finnish: {{t+|fi|Israel}}
-* French: {{t+|fr|Israël}}
-* German: {{t+|de|Israel}}
-* Greek: {{t+|el|Ισραήλ|n|tr=ísra'íl}}
-* Hebrew: {{t+|he|ישראל|m|alt=יִשְׂרָאֵל|tr=yiśra'ēl}}
-* Hindi: {{t-|hi|इस्राइल|tr=Isrāil|xs=Hindi}}
-* Hungarian: {{t+|hu|Izrael}}
-* Icelandic: {{t+|is|Ísrael}}
-* Indonesian: {{t-|id|Israel|xs=Indonesian}}
-* [[Interlingua]]: {{t-|ia|Israel|xs=Interlingua}}
-* Irish: {{t+|ga|Iosrael|m|xs=Irish}}
-* Italian: {{t+|it|Israele}}
-* Japanese: {{t+|ja|イスラエル|tr=isuraeru}}
-* [[Kalenjin]]: {{tø|kln|Israel}}
-* [[Kamba]]: {{tø|kam|Israel}}
-* [[Kannada]]: [[ಇಸ್ರೇಲ್]]
-* [[Kikuyu]]: {{tø|ki|Israel}}
-* Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
-{{trans-mid}}
-* Latvian: {{t-|lv|Izraēla|xs=Latvian}}, {{t|lv|Izraēlas Valsts|xs=Latvian}}
-* Lithuanian: {{t+|lt|Izraelis|m|xs=Lithuanian}}, {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
-* [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
-* [[Luo]]: {{tø|luo|Israel}}
-* [[Macedonian]]: {{t+|mk|Израел|m|tr=Ízrael}}
-* Maltese: [[Iżrael]]
-* [[Mansoanka]]: {{tø|msw|Israeli}}
-* [[Marathi]]: [[इस्रायल]] (isrāyal)
-* [[Meru]]: {{tø|mer|Israel}}
-* Navajo: {{tø|nv|Ízrel bikéyah}}
-* Norwegian: {{t+|no|Israel}}
-* [[Old Church Slavonic]]: [[Їздраил҄ь]]
-* [[Pashto]]: {{t|ps|اسرايل|sc=ps-Arab|xs=Pashto}}
-* Persian: {{t+|fa|اسرائیل|tr=Esrâ’il|xs=Persian}}
-* Polish: {{t+|pl|Izrael}}
-* Portuguese: {{t+|pt|Israel}}
-* Romanian: {{t-|ro|Israel|n}}
-* Russian: {{t+|ru|Израиль|m|tr=Izráil’}}
-* [[Samogitian]]: {{tø|bat-smg|Izraelės|m}}, {{tø|bat-smg|Izraele Valstībė|f}}
-* Sanskrit: {{t|sa|इस्रेल|xs=Sanskrit}}
-* [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: {{t-|sr|Израел|m|sc=Cyrl}}
-*: Roman: [[Izrael]] {{m}}
-* Slovene: {{t+|sl|Izrael|m}}
-* Spanish: {{t+|es|Israel}}
-* Swahili: {{t+|sw|Israeli|xs=Swahili}}
-* Swedish: {{t+|sv|Israel}}
-* [[Tatar]]: {{t-|tt|İsrael|xs=Tatar}}
-* Thai: {{t|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}},  {{t|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
-* Turkish: {{t+|tr|İsrail}}
-* Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
-* Urdu: {{t-|ur|اسرائیل|xs=Urdu}}
-* Vietnamese: {{t+|vi|Israel|xs=Vietnamese}}
-* Yiddish: {{t-|yi|ישראל|alt=ישׂראל|tr=Yisroel|xs=Yiddish}}
-{{trans-bottom}}
-
-{{trans-top|Biblical: name gven to Jacob}}
-* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
-{{trans-mid}}
-* Spanish: {{t+|es|Israel|m}}
-{{trans-bottom}}
-
-{{trans-top|given name}}
-* Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
-{{trans-mid}}
-{{trans-bottom}}
-
-===See also===
-* [[Appendix:Countries of the world]]
-* [[Irving]]
-
-===Anagrams===
-* {{alphagram|aeilrs}}
-* [[ariels#English|ariels]]
-* [[realis#English|realis]]
-* [[resail#English|resail]]
-* [[sailer#English|sailer]]
-* [[serial#English|serial]]
-
-[[Category:Countries]]
-
-----
-
-==Finnish==
-{{wikipedia|lang=fi}}
-
-===Proper noun===
-{{infl|fi|proper noun}}
-
-# [[#English|Israel]]
-
-====Declension====
-{{fi-decl-risti|Israel|np=1}}
-
-[[Category:fi:Countries]]
-
-----
-
-==German==
-
-===Proper noun===
-{{infl|de|proper noun|g=n}}
-
-# [[#English|Israel]]
-
-====Derived terms====
-* [[israelisch]]
-* [[israelitisch]]
-* [[Israelit]]
-* [[Israelitin]]
-* [[Israeli]]
-
-[[Category:de:Countries]]
-
-----
-
-==Norwegian==
-
-===Proper noun===
-{{infl|no|proper noun|g=g}}
-
-# [[#English|Israel]]
-
-====Derived terms====
-* [[israeler]]
-* [[israelsk]]
-
-[[Category:no:Countries]]
-
-----
-
-==Romanian==
-{{wikipedia|lang=ro}}
-
-===Etymology===
-{{etyl|he|ro}} {{Hebr|[[ישראל]]}}
-
-===Pronunciation===
-* {{IPA|[is.ra.el]|lang=ro}}
-
-===Proper noun===
-{{infl|ro|proper noun|g=n}}
-
-# [[#English|Israel]]
-
-====Declension====
-{{ro-noun-inv|gend=n|def=Israelul|gd=Israelului}}
-
-[[Category:ro:Countries]]
-
-----
-
-==Spanish==
-{{wikipedia|lang=es}}
-
-===Proper noun===
-{{es-proper noun|m}}
-
-# [[#English|Israel]]
-# {{biblical character|lang=es}} [[Jacob]]
-
-====Quotations====
-* {{RQ:Santa Biblia|Génesis|32|28}}
-*: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
-
-[[Category:es:Countries]]
-
-----
-
-==Swedish==
-
-===Proper noun===
-{{infl|sv|proper noun|g=n}}
-
-# [[#English|Israel]]
-
-[[Category:sv:Countries]]
-
-[[bg:Israel]]
-[[da:Israel]]
-[[de:Israel]]
-[[et:Israel]]
-[[el:Israel]]
-[[es:Israel]]
-[[fr:Israel]]
-[[fy:Israel]]
-[[gl:Israel]]
-[[ko:Israel]]
-[[hi:Israel]]
-[[hr:Israel]]
-[[io:Israel]]
-[[sw:Israel]]
-[[ku:Israel]]
-[[lt:Israel]]
-[[li:Israel]]
-[[hu:Israel]]
-[[nl:Israel]]
-[[no:Israel]]
-[[pl:Israel]]
-[[pt:Israel]]
-[[ru:Israel]]
-[[simple:Israel]]
-[[sr:Israel]]
-[[fi:Israel]]
-[[sv:Israel]]
-[[ta:Israel]]
-[[tt:Israel]]
-[[th:Israel]]
-[[tr:Israel]]
-[[vi:Israel]]
-[[zh:Israel]]
+ colour #33gg00 USLANMAZ <font><font> ,
+ <math> OFFF <math>
