--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -61,7 +61,7 @@
 * Latin: {{t-|la|ludus|m}}
 * [[Macedonian]]: {{t-|mk|игра|f|tr=ígra}}
 * [[Malayalam]]: [[കളി]] (kaLi)
-* Norwegian: {{t+|no|spill}}
+* Norwegian:
 *: Bokmål: {{t|no|spill|n}}
 *: Nynorsk: {{t|nn|spel|n}}
 * Polish: {{t+|pl|zabawa|f}}
