Undo revision 9264483 by [[Special:Contributions/达伟|达伟]] ([[User talk:达伟|talk]]) see talk page for some complexities of this sense <play#9264489>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -215,7 +215,7 @@
 #*: Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
 #* '''2003''', John U. Ogbu, ''Black American Students in an Affluent Suburb: A Study of Academic Disengagement'', page 194
 #*: Instead, they '''played''' dumb, remained silent, and did their classwork.
-# {{rfv-sense}} {{figurative}} In a game or game-like setting, to maintain a posture of being.
+# {{rfv-sense}} {{context|copulative}} In a game or game-like setting, to maintain a posture of being.
 #: '''''Play''' nice, children.''
 
 =====Translations=====
