iwiki +[[:es:Czech Republic]] <Czech Republic#9271048>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -87,6 +87,7 @@
 
 [[de:Czech Republic]]
 [[el:Czech Republic]]
+[[es:Czech Republic]]
 [[fr:Czech Republic]]
 [[hr:Czech Republic]]
 [[io:Czech Republic]]
