--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -21,6 +21,8 @@
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 # {{transitive}} To [[retrieve]] or [[generate]] for use.
 #: ''I'll have to '''pull''' a part number for that.''
+#* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
+#*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
 # {{intransitive}} To apply a force such that an object comes toward the person or thing applying the force.
 #: ''You're going to have to pull harder to get that cork out of the bottle.''
 # {{intransitive|slang}} To succeed in finding a person with whom to have sex or to make out with somebody which is not in a relationship with you, eg "I pulled tonight!" - meaning the person made out.
