--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -10,7 +10,7 @@
 *: {{rhymes|ɛlt}}
 
 ===Etymology 1===
-{{etyl|ang}} {{term|felt|lang=ang}}, from {{proto|Germanic|''filtaz''}} (cf. {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{proto|Indo-European|''pilto, pilso''}} 'felt' (cf. {{etyl|la|-}} {{term|pilleus|lang=la}} 'felt' (adj.), {{etyl|cu|-}} {{term|plŭstĭ|lang=lu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, [[Ancient Greek]] ''pílos''), from *''pel-'' 'to beat'. More at [[anvil]].
+{{etyl|ang}} {{term|felt|lang=ang}}, from {{proto|Germanic|''filtaz''}} (cf. {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{proto|Indo-European|''pilto, pilso''}} 'felt' (compare {{etyl|la|-}} {{term|pilleus|lang=la}} 'felt' (adj.), {{etyl|cu|-}} {{term|plŭstĭ|lang=lu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, [[Ancient Greek]] ''pílos''), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
 {{wikipedia}}
