t+be:[[Злучаныя Штаты Амерыкі]] t-balance ([[WT:EDIT|Assisted]]) <United States of America#9276089>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -19,6 +19,7 @@
 * Arabic: {{Arab|[[الولايات المتحدة الأمريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
 * Armenian: {{t-|hy|Ամերիկայի Միացյալ Նահանգներ|tr=Amerikayi Miac'yal Nahangner}}
 * [[Azeri]]: {{t+|az|Amerika Birləşmiş Ştatları|xs=Azeri}}
+* Belarusian: {{t|be|Злучаныя Штаты Амерыкі|m|p|tr=Zlúčanyja Štáty Améryki|sc=Cyrl}}
 * Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
 * [[Breton]]: {{t|br|Stadoù-Unanet Amerika|f|p|xs=Breton}}, {{t-|br|SUA|xs=Breton}}
@@ -57,9 +58,9 @@
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * [[Lao]]: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
+{{trans-mid}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
-{{trans-mid}}
 * {{trreq|Laz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi}}, [[САД]] (SAD)
