--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -23,7 +23,7 @@
 * Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
 * [[Breton]]: {{t|br|Stadoù-Unanet Amerika|f|p|xs=Breton}}, {{t-|br|SUA|xs=Breton}}
-* Bulgarian: {{t|bg|Съединени Американски Щати|tr=Sǎedineni amerikanski štati}}, {{t|bg|САЩ}}, {{t|bg|САЩ|m|p|tr=sašt|sc=Cyrl}}
+* Bulgarian: {{t|bg|Съединени Американски Щати|m|p|tr=Sǎedinéni Amerikánski Štáti}}, {{t|bg|САЩ|m|p|tr=sašt|sc=Cyrl}}
 * [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|sc=Hani|xs=Cantonese}}
@@ -63,7 +63,7 @@
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * {{trreq|Laz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
-* [[Macedonian]]: {{t-|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi}}, [[САД]] (SAD), {{t|mk|САД|m|p|tr=SAD|sc=Cyrl}}
+* [[Macedonian]]: {{t-|mk|Соединети Американски Држави|f|p|tr=Soedíneti Ameríkanski D'ržavi}}, {{t|mk|САД|f|p|tr=SAD|sc=Cyrl}}
 * Malay: {{t|ms|Amerika Syarikat|xs=Malay}}
 * {{trreq|Malayalam}}
 * Maltese: {{t|mt|Stati Uniti ta' l-Amerika|xs=Maltese}}, {{t|mt|l-Istati Uniti ta' l-Amerika|xs=Maltese}}, (''short form'') {{t-|mt|Stati Uniti|xs=Maltese}}, {{t|mt|l-Istati Uniti|xs=Maltese}}, {{t-|mt|USA|xs=Maltese}}
@@ -78,7 +78,7 @@
 * Portuguese: {{t+|pt|Estados Unidos da América|m|p}}, ''short:'' {{t+|pt|Estados Unidos|m|p}}, {{t+|pt|EUA}}
 * [[Punjabi]]: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 * Romanian: {{t+|ro|Statele Unite ale Americii|f|p}}
-* Russian: {{t+|ru|Соединённые Штаты Америки|m|p|tr=Sojedinjónnyje Štáty Amériki}}, {{t+|ru|США}}, {{t|ru|США|m|p|tr=sɛ-šɛ-á|sc=Cyrl}}
+* Russian: {{t+|ru|Соединённые Штаты Америки|m|p|tr=Sojedinjónnyje Štáty Amériki}}, {{t+|ru|США|m|p|tr=sɛ-šɛ-á|sc=Cyrl}}
 * [[Scottish Gaelic]]: Na [[Stàitean Aonaichte]] {{f|p}}, Na [[Stàitean Aonaichte na h-Aimeireaga]] {{f|p}}
 * Serbian:
 *: Cyrillic: {{t-|sr|Сједињене Америчке Државе|f|p|sc=Cyrl}}, {{t-|sr|САД|sc=Cyrl}}
@@ -95,7 +95,7 @@
 * {{trreq|Telugu}}
 * Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa),  {{t|th|อเมริกา|tr=àmayrígaa}},  {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|ABD}}
-* Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolučeni Štáti Amériki|xs=Ukrainian}}, {{t+|uk|США|xs=Ukrainian}}, {{t|uk|США|m|p|tr=se-še-á|sc=Cyrl}}
+* Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolúčeni Štáty Améryki|xs=Ukrainian}}, {{t+|uk|США|m|p|tr=se-še-á|sc=Cyrl}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyaastahaa'e muttaHidah amriikaa|xs=Urdu}}
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
 * Uzbek: [[Amerika Qo'shma Shtatlari]]
