--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -137,7 +137,8 @@ However, some older forms of the character have a more complex form, and show a 
 {{bottom}}
 
 ====Phrases====
-* [[明枪易躲，暗箭难防]]
+* [[明槍易躲，暗箭難防]] ([[明枪易躲，暗箭难防]])
+* [[明目張膽]] ([[明目张胆]])
 
 ----
 
