iwiki +[[:lb:France]] <France#9283874>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -217,6 +217,7 @@ From {{etyl|la|fro}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=l
 [[lo:France]]
 [[la:France]]
 [[lv:France]]
+[[lb:France]]
 [[lt:France]]
 [[li:France]]
 [[hu:France]]
