t+id:[[kurva]] ([[WT:EDIT|Assisted]]) <curve#9284426>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -99,6 +99,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * German: {{t+|de|Linie|f}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampýli}}
 * Hungarian: {{t+|hu|görbe}}
+* Indonesian: {{t|id|kurva}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t-|ja|曲線|tr=きょくせん, kyokusen}}
 * Russian: {{t|ru|кривая|f|tr=krivája}}
