/* Translations */ tø for grc <stomach#9307546>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 * French: {{t+|fr|estomac|m}}
 * German: {{t+|de|Magen|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|στόμαχος|m|tr=stómachos}}
-** Ancient: {{t|grc|στόμαχος|tr=stómachos|m}}, {{t|grc|γαστήρ|tr=ɣastír|m}}
+** Ancient: {{tø|grc|στόμαχος|tr=stómachos|m}}, {{tø|grc|γαστήρ|tr=ɣastír|m}}
 * Hebrew: {{t+|he|קיבה|f}}
 * Hindi: {{t-|hi|अमाशय|m|xs=Hindi}}
 * Hungarian: {{t+|hu|gyomor}}
