--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -6,6 +6,9 @@
 * {{rhymes|i|lang=fr}}
 * {{homophones|jeudis|lang=fr}}
 
+===Etymology===
+From {{etyl|la|fr}} {{term|dies Iovis||day of Jupiter|lang=la}}.
+
 ===Noun===
 {{fr-noun|m}}
 
